@@ -23,6 +23,10 @@ cat <<EOF
 /* Generated automatically by mkerrors */
 /* Do not edit! */
 
+#ifdef HAVE_CONFIG_H
+#include <config.h>
+#endif
+
 #include <stdio.h>
 #include "assuan.h"
 
