@@ -1,6 +1,9 @@
 Noteworthy changes in version 0.6.11
 -------------------------------------------------
 
+ * Internal cleanups to make inclusion of the code into libraries
+   easier.
+
 
 Noteworthy changes in version 0.6.10 (2005-06-20)
 -------------------------------------------------
